# VaniaEngine

./: CMakeLists.txt  run.sh  todo.md
src/: App.cpp  App.hpp  EntityDefEditor.cpp  EntityDefEditor.hpp  EntityPanel.cpp  EntityPanel.hpp  FilesystemWatcher.cpp  FilesystemWatcher.hpp  GameDataStructs.hpp  GamePanel.cpp  GamePanel.hpp  IPanel.hpp  WorldPanel.cpp  WorldPanel.hpp  main.cpp
src/panels/: AssetPanel.cpp  AssetPanel.hpp  ConsolePanel.cpp  ConsolePanel.hpp  EditorContext.hpp  EntityPanel.cpp  EntityPanel.hpp  GamePanel.cpp  GamePanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  PanelEntityRendering.hpp  ProjectPanel.cpp  ProjectPanel.hpp  WorldPanel.cpp  WorldPanel.hpp
src/physics/: collision.cpp  collision.hpp
src/render/: IRenderer.hpp  RendererForImGui.hpp  RendererForSDL.hpp
src/run/: AssetManager.cpp  AssetManager.hpp  Runner.cpp  Runner.hpp  render.hpp  utils.hpp
testres/: MouseFollowRectTest.lua  bullet.lua  main.json  myscript.lua  myscript2.lua  player.lua  zombie.lua
